# kalshi-trading-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
backtesting/: index.html
configuration/: index.html
docker/: Dockerfile
docs/: backtesting.md  configuration.md  getting-started.md  index.md  strategies.md
examples/: backtest_demo.py  config.example.yaml
getting-started/: index.html
search/: search_index.json
secrets/: README.md
src/kalshi_bot/: __init__.py  __main__.py  cli.py  config.py
src/kalshi_bot/backtesting/: data.py  engine.py  metrics.py  report.py
src/kalshi_bot/core/: __init__.py  engine.py
src/kalshi_bot/data/: __init__.py
src/kalshi_bot/exchange/: __init__.py  auth.py  client.py  models.py  websocket.py
src/kalshi_bot/risk/: manager.py
src/kalshi_bot/strategies/: base.py
src/kalshi_bot/strategies/examples/: __init__.py  arbitrage.py  fair_value.py  market_maker.py  mean_reversion.py  momentum.py
src/kalshi_bot/telemetry/: __init__.py  logging.py
strategies/: index.html
tests/unit/: test_auth.py  test_backtest.py  test_backtest_engine.py  test_cli.py  test_config.py  test_metrics.py  test_models.py  test_risk.py  test_strategies.py
