[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalshi-trading-bot"
version = "0.2.0"
description = "Open-source algorithmic trading framework for Kalshi prediction markets — by Viprasol Tech."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viprasol Tech Private Limited", email = "support@viprasol.com" }]
maintainers = [{ name = "Viprasol Tech Private Limited", email = "support@viprasol.com" }]
keywords = [
  "kalshi",
  "trading",
  "prediction-markets",
  "event-contracts",
  "algorithmic-trading",
  "backtesting",
  "market-making",
  "quant",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "httpx>=0.27",
  "websockets>=12.0",
  "cryptography>=42.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "rich>=13.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "respx>=0.21",
]
docs = [
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]

[project.scripts]
kalshi-bot = "kalshi_bot.cli:app"

[project.urls]
Homepage = "https://viprasol.com"
Documentation = "https://viprasol-tech.github.io/kalshi-trading-bot"
Repository = "https://github.com/Viprasol-Tech/kalshi-trading-bot"
Issues = "https://github.com/Viprasol-Tech/kalshi-trading-bot/issues"
Company = "https://viprasol.com"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "C4", "PIE"]
ignore = [
  "B008",   # typer uses function calls in argument defaults
  "B027",   # intentional empty optional hooks on the Strategy ABC
  "UP042",  # str+Enum is kept for pydantic/JSON serialisation compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["kalshi_bot"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q --cov=kalshi_bot --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
